# agios-updated

./: .gitignore  README.md  bun.lockb
apps/rust-engine/: .env.example  .gitignore  Cargo.toml  README.md
apps/rust-engine/migrations/: 20231228_init.sql
apps/rust-engine/src/: error.rs  main.rs  middleware.rs  models.rs  schemas.rs
apps/rust-engine/src/client/: mod.rs
apps/rust-engine/src/common/: bindings.rs  mod.rs  schema.rs
apps/rust-engine/src/providers/: gocardless.rs  interface.rs  mod.rs  plaid.rs  teller.rs  truelayer.rs  types.rs  wise.rs
apps/rust-engine/src/providers/gocardless/: gocardless-api.rs  gocardless-provider.rs  transform.rs  types.rs  utils.rs
apps/rust-engine/src/providers/plaid/: plaid-api.rs  plaid-provider.rs  transform.rs  transform.test.rs  types.rs  utils.rs
apps/rust-engine/src/providers/teller/: teller-api.rs  teller-provider.rs  transform.rs  transform.test.rs  types.rs  utils.rs
apps/rust-engine/src/routes/: mod.rs
apps/rust-engine/src/routes/accounts/: mod.rs  schema.rs
apps/rust-engine/src/routes/auth/: mod.rs  schema.rs
apps/rust-engine/src/routes/connections/: mod.rs  schema.rs
apps/rust-engine/src/routes/enrich/: mod.rs
apps/rust-engine/src/routes/health/: mod.rs
apps/rust-engine/src/routes/institutions/: mod.rs  schema.rs
apps/rust-engine/src/utils/: account.rs  config.rs  countries.rs  enrich.rs  error.rs  logo.rs  mod.rs  paginate.rs  rates.rs  retry.rs  search.rs
apps/rust-engine/tasks/: download_gocardless.rs  download_teller.rs  get_institutions.rs  import.rs  utils.rs
mobile-app/: App.js  (+2 more)
(+94 files in other folders)
