[package]
name = "midday-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
futures-util = "0.3"
jsonwebtoken = "9.2"
lazy_static = "1.4"
log = "0.4"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["actix-web"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
